--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
               <b>OS:</b> <span class="" id="os-info"></span><br>
               <b>Uptime:</b> <span id="os-uptime"></span><br>
               <b>Hostname:</b> <span class="" id="os-hostname"></span><br>
+              <b>Temp:</b> <span class="" id="os-temp"></span><br>
               <br><br>
               </div>
             </div>
