fix table widget

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
 
 
-                        <div id="disk-usage-widget" class="widget col-md-6">
+                        <div id="disk-usage-widget" class="widget col-md-6 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-list"></i>
@@ -202,7 +202,7 @@
                         </div>
 
 
-                        <div id="software-widget" class="widget col-md-6">
+                        <div id="software-widget" class="widget col-md-6 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-list"></i>
@@ -219,7 +219,7 @@
                             </div>
                         </div>
 
-                        <div id="dns-lease-widget" class="widget col-md-6">
+                        <div id="dns-lease-widget" class="widget col-md-6 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-list"></i>
@@ -236,7 +236,7 @@
                             </div>
                         </div>
                 
-                        <div id="ip-widget" class="widget col-md-3">
+                        <div id="ip-widget" class="widget col-md-3 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-list"></i>
@@ -279,7 +279,7 @@
                             </div>
                         </div>
 
-                        <div id="netstat-widget" class="widget col-md-3">
+                        <div id="netstat-widget" class="widget col-md-3 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-dashboard"></i>
@@ -296,7 +296,7 @@
                             </div>
                         </div>
 
-                        <div id="ping-widget" class="widget col-md-4">
+                        <div id="ping-widget" class="widget col-md-4 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-exchange"></i>
@@ -332,7 +332,7 @@
                             </div>
                         </div>
 
-                       <div id="users-widget" class="widget col-md-4">
+                       <div id="users-widget" class="widget col-md-4 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-group"></i>
@@ -349,7 +349,7 @@
                             </div>
                         </div>
 
-                        <div id="online-widget" class="widget col-md-4">
+                        <div id="online-widget" class="widget col-md-4 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-group"></i>
@@ -366,7 +366,7 @@
                             </div>
                         </div>
 
-                        <div id="lastlog-widget" class="widget col-md-4">
+                        <div id="lastlog-widget" class="widget col-md-4 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-group"></i>
@@ -383,7 +383,7 @@
                             </div>
                         </div>
 
-                        <div id="process-widget" class="widget col-md-12">
+                        <div id="process-widget" class="widget col-md-12 table-widget">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <i class="icon icon-dashboard"></i>
