--- a/index.html
+++ b/index.html
@@ -10,6 +10,62 @@
 
     </head>
     <body>
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="./">linux-dash</a>
+                    <div class="navbar-toggle" data-toggle="collapse" data-target="#menu">
+                        <span class="sr-only">Menu</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </div>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div id="menu" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="./" class="btn fa fa-refresh" data-title="Refresh all widgets!" data-toggle="tooltip">
+                            </a>
+                        </li>
+                        
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <i id="closed-widget-count">0</i>
+                                <span> Closed Widgets <span class="caret"></span></span>
+                            </a>
+                            <ul class="dropdown-menu" id="closed-widget-list">
+                                <li id="close-all-widgets">
+                                    <a href="#"> <i class="icon-remove lead pull-left"></i> Close All Widgets</a>
+                                </li>
+                                <li id="open-all-widgets">
+                                    <a href="#"> <i class="icon-plus lead pull-left"></i> Open All Widgets</a>
+                                </li>
+                                <li>
+                                    <hr>
+                                </li>
+                            </ul>
+                         </li>
+                        <li class="dropdown">
+                            <a id="phpinfo-widget-what" href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <span>PHPInfo <span class="caret"></span></span>
+                            </a>
+                            <ul class="dropdown-menu" id="phpinfo-widget-opt">
+                                <li><a href="sh/phpinfo.php?what=-1" target="_blank"><i class="icon-info"></i> - INFO_ALL</a></li>
+                                <li><a href="sh/phpinfo.php?what=1" target="_blank"><i class="icon-info"></i> - INFO_GENERAL</a></li>
+                                <li><a href="sh/phpinfo.php?what=4" target="_blank"><i class="icon-info"></i> - INFO_CONFIGURATION</a></li>
+                                <li><a href="sh/phpinfo.php?what=8" target="_blank"><i class="icon-info"></i> - INFO_MODULES</a></li>
+                                <li><a href="sh/phpinfo.php?what=16" target="_blank"><i class="icon-info"></i> - INFO_ENVIRONMENT</a></li>
+                                <li><a href="sh/phpinfo.php?what=32" target="_blank"><i class="icon-info"></i> - INFO_VARIABLES</a></li>
+                                <li><a href="sh/phpinfo.php?what=2" target="_blank"><i class="icon-info"></i> - INFO_CREDITS</a></li>
+                            </ul>
+                        </li>
+                  </ul>
+                </div>
+            </div>
+        </nav>
         <div class="container">
             <div id="widgets" class="row">
             </div>
