--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                             </a>
                             <ul class="dropdown-menu" id="closed-widget-list">
                                 <li id="close-all-widgets">
-                                    <a href="#"> <i class="icon-remove lead pull-left"></i> Close All Widgets</a>
+                                    <a href="#"> <i class="fa fa-minus-circle"></i> Close All</a>
                                 </li>
                                 <li id="open-all-widgets">
-                                    <a href="#"> <i class="icon-plus lead pull-left"></i> Open All Widgets</a>
+                                    <a href="#"> <i class="fa fa-plus-circle"></i> Open All</a>
                                 </li>
                                 <li>
                                     <hr>
